# my-secret-zip2

./: .gitattributes
LBM/: .gitattributes  .gitignore  CMakeLists.txt  LBM.cpp  LBM.h  LBM_cpp_FP16Pack.txt  LBM_cpp_FP16Pack2.txt  collide_and_stream_comp_FP16Pack.txt  collide_and_stream_comp_FP16Pack2.txt  compile.bat  init_comp_FP16Pack2.txt  main.cpp  simulation_header_glsl_FP16Pack.txt  simulation_header_glsl_FP16Pack2.txt  tmp.cap
LBM/include/: utilities.hpp
LBM/include/imgui/: CMakeLists.txt
LBM/models/: duck_float.glb  ladder.glb  plank2.abc  plank3.abc  plank_240_60.abc  plank_360_60_1.abc  plank_360_60_2.abc  plank_480_60_1.abc  plank_480_60_2.abc  pool.glb  pool_ground.glb
LBM/shaders/: addupTotalMass.comp  calc.comp  collide_and_stream.comp  compile.bat  debug_particle.frag  debug_particle.vert  filtered.comp  init.comp  model.frag  model.vert  particle.frag  particle.vert  postprocess.comp  raytrace.comp  render_header.glsl  simulation_header.glsl  skybox.vert  surface.frag  surface.vert  surface0.comp  surface1.comp  surface2.comp  surface3.comp  upscale.comp  voxelize_model.comp
LBM/stl/: edf_v39.stl  edf_v391.stl  muban.stl
LBM/textures/: skybox.ktx
